--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,7 +16,7 @@ h1 {
 
 h2 {
   font-family: Georgia, "Times New Roman", Times, serif;
-  text-align: center;
+  text-align: left;
 }
 
 .main--image {
@@ -79,7 +79,6 @@ h2 {
 
 .card {
   padding: 2rem 4rem;
-  /* box-shadow: 1px 1px 1px rgb(207, 207, 207); */
   border-radius: 20px;
   margin-bottom: 2rem;
   background-color: rgb(255, 255, 255);
@@ -100,6 +99,12 @@ h2 {
 
 .card--image:hover {
   filter: grayscale(0%);
+}
+
+.card--title--fav {
+  font-size: 20px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  text-align: left;
 }
 
 .btn--view {
@@ -146,8 +151,8 @@ h2 {
   -ms-transform: translate(-50%, -50%);
   top: 40%;
   left: 93%;
-  font-size: 15px;
-  padding: 5px 8px;
+  font-size: 11px;
+  padding: 4px 10px;
   border: none;
   cursor: pointer;
   border-radius: 10px;
