--- a/client/src/App.css
+++ b/client/src/App.css
@@ -52,6 +52,7 @@ h2 {
   border: 1px solid #ddd;
   margin-bottom: 1rem;
   font-family: Georgia, "Times New Roman", Times, serif;
+  margin-bottom: 0;
 }
 
 .button {
@@ -112,8 +113,7 @@ h2 {
   font-size: 15px;
   padding: 5px 10px;
   border: none;
-  cursor: pointer;
-  border-radius: 5px;
+  border-radius: 8px;
 }
 
 .btn--save {
@@ -125,9 +125,8 @@ h2 {
   background-color: rgb(96, 136, 15);
   color: white;
   font-size: 15px;
-  padding: 10px 20px;
+  padding: 10px 15px;
   border: none;
-  cursor: pointer;
   border-radius: 10px;
 }
 
@@ -147,7 +146,5 @@ h2 {
   left: 93%;
   font-size: 11px;
   padding: 4px 10px;
-  border: none;
-  cursor: pointer;
   border-radius: 10px;
 }
