--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,7 @@ body {
   background-color: rgb(255, 255, 255);
   color: rgb(51, 51, 51);
   background-color: rgba(255, 255, 255, 0.85);
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 h1 {
@@ -11,12 +12,11 @@ h1 {
   font-weight: 900;
   font-size: 9rem;
   padding: 20px;
-  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 h2 {
-  font-family: Georgia, "Times New Roman", Times, serif;
-  text-align: left;
+  text-align: center;
+  font-size: 20px;
 }
 
 .main--image {
@@ -28,7 +28,6 @@ h2 {
   display: flex;
   justify-content: right;
   margin: 30px;
-  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 .container {
@@ -51,7 +50,6 @@ h2 {
   border-radius: 20px;
   border: 1px solid #ddd;
   margin-bottom: 1rem;
-  font-family: Georgia, "Times New Roman", Times, serif;
   margin-bottom: 0;
 }
 
@@ -61,7 +59,6 @@ h2 {
   border-radius: 20px;
   font-size: 16px;
   cursor: grabbing;
-  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 .button:hover {
@@ -82,7 +79,6 @@ h2 {
 .card--title {
   margin-bottom: 0.5rem;
   font-size: 20px;
-  font-family: Georgia, "Times New Roman", Times, serif;
   text-align: center;
 }
 
@@ -96,29 +92,13 @@ h2 {
   filter: grayscale(0%);
 }
 
-.card--title--fav {
-  font-size: 20px;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  text-align: left;
-}
-
-.btn--view {
-  position: absolute;
-  top: 50%;
-  left: 83%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  background-color: rgb(96, 136, 15);
-  color: white;
-  font-size: 15px;
-  padding: 5px 10px;
-  border: none;
-  border-radius: 8px;
+.card--header {
+  font-size: 22px;
 }
 
 .btn--save {
   position: absolute;
-  top: 70%;
+  top: 60%;
   left: 80%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
@@ -142,7 +122,7 @@ h2 {
   position: absolute;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  top: 40%;
+  top: 50%;
   left: 93%;
   font-size: 11px;
   padding: 4px 10px;
